--- a/package.json
+++ b/package.json
@@ -17,8 +17,10 @@
     "json-server": "^1.0.0-beta.3",
     "react": "18.2.0",
     "react-native": "0.74.5",
+    "react-native-fast-image": "^8.6.3",
     "react-native-safe-area-context": "^4.11.0",
-    "react-native-screens": "^3.34.0"
+    "react-native-screens": "^3.34.0",
+    "expo-av": "~14.0.7"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
