--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
     "react-native": "0.74.5",
     "react-native-fast-image": "^8.6.3",
     "react-native-safe-area-context": "^4.14.0",
-    "react-native-screens": "^3.35.0"
+    "react-native-screens": "^3.35.0",
+    "expo-image-picker": "~15.0.7"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
